--- a/3rd_Seminar/test/.gitignore
+++ b/3rd_Seminar/test/.gitignore
@@ -64,3 +64,6 @@ node_modules/
 
 # dotenv environment variables file
 .env
+
+# firebase service account
+wesopt29-e0987-firebase-adminsdk-f54d4-83c962398e.json
